# bia-converter

./: .gitignore  README.md  README.rst  bia.yaml  pyproject.toml
bia_converter/: assign.py  bia_api_client.py  cli.py  config.py  conversion.py  convert.py  io.py  models.py  omezarrgen.py  omezarrmeta.py  proxyimage.py  rendering.py  scli.py  utils.py  zarr2zarr.py
scripts/: spike2.py
